--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "dev": "npx nodemon index.js"
+    "dev": "npx nodemon index.js",
+    "debug": "nodemon --inspect index.js"
   },
   "keywords": [],
   "author": "",
