--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MYSQL_HOST='127.0.0.1'
 MYSQL_USER='root'
 MYSQL_PASSWORD= 'Itson'
 MYSQL_DATABASE= 'db_usuarios'
+JWT_SECRET=textosecretoDECIFRADO
+JWT_EXPIRATION=7d
+JWT_COOKIE_EXPIRES= 1
+KEY_AES=1234567890987654321qwertyuiopoiuytrewq
