--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.2.0",
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "dotenv": "^16.4.5",
@@ -37,6 +39,7 @@
     "ipaddr.js": "^1.9.1",
     "isarray": "^1.0.0",
     "jake": "^10.8.7",
+    "jsonwebtoken": "^9.0.2",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -80,8 +83,7 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "dev": "npx nodemon index.js",
-    "debug": "nodemon --inspect index.js"
+    "dev": "npx nodemon index.js"
   },
   "keywords": [],
   "author": "",
