cambios en publico

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MYSQL_HOST='127.0.0.1'
 MYSQL_USER='root'
-MYSQL_PASSWORD= 'Itson'
+MYSQL_PASSWORD= 'esme2304'
 MYSQL_DATABASE= 'db_usuarios'
 JWT_SECRET=textosecretoDECIFRADO
 JWT_EXPIRATION=7d
