--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "vary": "^1.1.2"
   },
   "scripts": {
-    "dev": "npx nodemon index.js"
+    "dev": "npx nodemon index.js",
+    "start":  "node index.js"
   },
   "keywords": [],
   "author": "",
